# apps/api/openapi/openapi.json
@@ -733,6 +733,30 @@
                 ]
             }
         },
+        "/cite/report": {
+            "put": {
+                "operationId": "CiteController_report",
+                "parameters": [],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CiteReportDto"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                },
+                "tags": [
+                    "cite"
+                ]
+            }
+        },
         "/cite/date/{id}": {
             "post": {
                 "operationId": "CiteController_findByDoctorAndDate",
@@ -2369,6 +2393,33 @@
                     "time",
                     "doctor",
                     "patient"
+                ]
+            },
+            "CiteReportDto": {
+                "type": "object",
+                "properties": {
+                    "start": {
+                        "type": "string"
+                    },
+                    "end": {
+                        "type": "string"
+                    },
+                    "patientId": {
+                        "type": "number"
+                    },
+                    "doctorId": {
+                        "type": "number"
+                    },
+                    "status": {
+                        "type": "boolean"
+                    }
+                },
+                "required": [
+                    "start",
+                    "end",
+                    "patientId",
+                    "doctorId",
+                    "status"
                 ]
             },
             "CreateCiteDto": {
